--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@
 /.idea/**
 /terraform/.terraform/**
 /terraform/.terraform.tfstate.lock.info
-/terraform/terraform.tfstate
+/terraform/terraform.tfstate.backup
 /terraform/tfplan
 /intuit.iml
