--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,6 +1,5 @@
 FROM tomcat
 MAINTAINER pdhir
-
 ADD sample.war /usr/local/tomcat/webapps/
-
+ADD index.html /usr/local/tomcat/webapps/ROOT/
 CMD ["catalina.sh", "run"]
